@@ -3,3 +3,4 @@ version=3.4.1
 depends:
     sale
 xml:
+    sale.xml
