@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<!-- The COPYRIGHT file at the top level of this repository contains the full
+     copyright notices and license terms. -->
+<data>
+    <xpath expr="/form//label[@name='delivery_date']" position="before">
+        <label name="manual_delivery_date"/>
+        <field name="manual_delivery_date"/>
+    </xpath>
+</data>
